--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Electron boilerplate</title>
-		<link rel="stylesheet" href="index.css">
-		<link rel="stylesheet" href="css/photon.css">
+		<!--Import Google Icon Font-->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 		<script>
 			const {ipcRenderer} = require('electron');
 			ipcRenderer.on('load-data-result', (event, arg) => {
@@ -18,19 +20,20 @@
 		  </script>		
 	</head>
 	<body>
-		<div class="window">
-			<header class="toolbar toolbar-header">
-				<h1 class="title" id="question">Question</h1>
-			</header>
-			<div class="window-content">
-				<div class="pane" id="answer1">Answer 1</div>
-				<div class="pane" id="answer2">Answer 2</div>
-				<div class="pane" id="answer3">Answer 3</div>
-				<div class="pane" id="answer4">Answer 4</div>
+		<section>
+				<h3 class="header center blue-text" id="question">Question</h3>
+		</section>
+		<div class="container">
+			<div class="section">
+				<div class="row">
+					<div class="col s3 m3"><div id="answer1">Answer 1</div></div>
+					<div class="col s3 m3"><div id="answer2">Answer 2</div></div>
+					<div class="col s3 m3"><div id="answer3">Answer 3</div></div>
+					<div class="col s3 m3"><div id="answer4">Answer 4</div></div>
+				</div>
 			</div>
-			<footer class="toolbar toolbar-footer">
-				<button class="btn btn-default" id='btn-update-question' onclick="require('electron').ipcRenderer.send('load-data', 'hello')">Update!</button>
-			</footer>			
 		</div>
+		<a class="btn-floating btn-large waves-effect waves-light red"  id='btn-update-question' onclick="require('electron').ipcRenderer.send('load-data', 'hello')"><i class="material-icons">add</i></a>
+		<script type="text/javascript" src="js/materialize.min.js"></script>
 	</body>
 </html>
